--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "on-debug-initial-configurations",
-	"displayName": "on-debug-initial-configurations",
+	"name": "on-debug-resolve",
+	"displayName": "on-debug-resolve",
 	"publisher": "test",
 	"description": "",
 	"version": "0.0.1",
@@ -12,7 +12,7 @@
 	],
 	"repository": "https://github.com/akosyakov/debug-activation-events",
 	"activationEvents": [
-		"onDebugInitialConfigurations"
+		"onDebugResolve"
 	],
 	"main": "./out/extension.js",
 	"scripts": {
